# dbzioum

./: Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: ci.yml
mysql/: Cargo.toml
mysql/benches/: binlog.rs
mysql/src/: binlog.rs  buf_ext.rs  conn.rs  constants.rs  debug.rs  lib.rs  mod.rs  query.rs  scramble.rs  stream.rs
mysql/tests/: mysql_integration_test.rs
mysql2kafka/: Cargo.toml
mysql2kafka/src/: main.rs
pg/: Cargo.toml
pg/src/: buf_ext.rs  conn.rs  lib.rs  query.rs  stream.rs
pg/tests/: pg_integration_test.rs
pg2kafka/: Cargo.toml
pg2kafka/src/: main.rs
scripts/: mysql.sql
scripts/mysql/: mysql.cnf  mysql_setup.sh
scripts/pg/: Dockerfile  pg_setup.sh  server.crt
sink/: Cargo.toml
sink/src/: lib.rs
src/: connection.rs  debug.rs  gcp.rs  http.rs  lib.rs  main.rs  pg.rs  sink.rs  stream.rs
src/gcp/: mod.rs
src/mysql/: binlog.rs  buf_ext.rs  conn.rs  constants.rs  mod.rs  protocol.rs  protocol_binlog.rs  scramble.rs  value.rs
src/pg/: buf_ext.rs  cancel.rs  conn.rs  mod.rs  query.rs  stream.rs  wal.rs
src/sink/: mod.rs  stdout.rs
src/stream/: mysql.rs  pg.rs
tests/: gcp_bigquery_test.rs  gcp_storage_test.rs  mysql_test.rs  pg_test.rs
