[package]
name = "mysql2kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2" }
url = { version = "2.3" }
mysql = { path = "../mysql" }
sink = { path = "../sink" }